WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99721
[EFL] GraphicsContext3D::m_renderStyle is not initialized
https://bugs.webkit.org/show_bug.cgi?id=99721
Summary
[EFL] GraphicsContext3D::m_renderStyle is not initialized
Yael
Reported
2012-10-18 08:10:54 PDT
SSIA
Attachments
Patch
(1.30 KB, patch)
2012-10-18 08:15 PDT
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2012-10-18 08:15:46 PDT
Created
attachment 169415
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-18 13:18:08 PDT
Comment on
attachment 169415
[details]
Patch Clearing flags on attachment: 169415 Committed
r131796
: <
http://trac.webkit.org/changeset/131796
>
WebKit Review Bot
Comment 3
2012-10-18 13:18:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug