[EFL] GraphicsContext3D::m_renderStyle is not initialized https://bugs.webkit.org/show_bug.cgi?id=99721

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-18
Reviewed by Antonio Gomes.

Initialize GraphicsContext3D::m_renderStyle.

No new tests, no new functionality.

* platform/graphics/efl/GraphicsContext3DEfl.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):

Canonical link: https://commits.webkit.org/117736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131796 268f45cc-cd09-0410-ab3c-d52691b4dbfc